# sphinxcontrib-shellcheck

./: .gitignore  .gitmodules  .headerrc  .pre-commit-config.yaml  .pydocstyle  .pylintrc  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE  MANIFEST.in  MANIFEST.in.test  MANIFEST.in.wheel  Makefile  README.rst  appveyor.yaml  appveyor.yml  azure-pipelines.yml  pyproject.toml  requirements.txt  requirements_appveyor.txt  setup.py  tox.ini
.hooks/: pre-commit  setup-git-hooks.sh
data/: .travis.sh  appveyor.bat  exclude-linting  exclude-spelling  requirements.txt  travis.sh  whitelist.en.pws  wintest.bat
pylint_plugins/: .headerrc  aspell.py  check-spelling.sh  header.py  pylint_codes.py
sphinxcontrib/: __init__.py  lintshell.py  pkgdata.py  shellcheck.py  version.py
tests/: .coveragerc  make-coveragerc.sh  test_shellcheck.py  test_sphinxcontrib.py
tests/support/: README.rst  api.rst  conf.py  index.rst  mymodule.py
tests/support1/: README.rst  api.rst  conf.py  mymodule1.py
tests/support2/: README.rst  api.rst  index.rst  mymodule2.py
